# llm-selective-answering

./: .gitignore  COLAB.md  README.md  ROADMAP.md  environment.yml  pyproject.toml
configs/: draft.yaml  draft_1000_strict_json.yaml  draft_500.yaml  draft_500_no_category.yaml  full.yaml  smoke_test.yaml
data/: README.md
data/processed/: README.md
data/raw/: README.md
notebooks/: 00_project_overview.ipynb  01_eda.ipynb  02_correctness_models.ipynb  03_results_and_figures.ipynb
paper/: final_paper.md  final_paper.tex  references.bib
presentation/: slides.md
results/: README.md
scripts/: 01_build_items.py  02_run_model.py  03_build_features.py  04_train_models.py  05_evaluate_policies.py  06_make_figures.py  07_run_experiment.py  08_confirmatory_analysis.py
src/abstention/: __init__.py  config.py  data.py  features.py  inference.py  metrics.py  models.py  parsing.py  plots.py  policies.py  prompts.py  scoring.py  utils.py
tests/: test_data.py  test_metrics.py  test_models.py  test_parsing.py  test_policies.py  test_prompts.py  test_scoring.py
