[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-sensitive-abstention"
version = "0.1.0"
description = "Correctness prediction and cost-sensitive abstention for language-model answers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.19",
    "evaluate>=0.4",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "torch>=2.2",
    "tqdm>=4.66",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

